--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.6.2",
-    "jquery": "2.2.4",
-    "feather-icons": "^4.7.0"
+    "cryptofont": "^0.1.1",
+    "feather-icons": "^4.7.0",
+    "jquery": "2.2.4"
   }
 }
