--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
   "license": "Commercial",
   "private": true,
   "dependencies": {
+    "aos": "^2.2.0",
     "bulma": "^0.6.2",
     "cryptofont": "^0.1.1",
     "feather-icons": "^4.7.0",
     "jquery": "2.2.4",
-    "modal-video": "^2.3.2"
+    "jquery.easing": "^1.4.1",
+    "modal-video": "^2.3.2",
+    "particlesjs": "2.2.0"
   }
 }
