--- a/package.json
+++ b/package.json
@@ -2,64 +2,15 @@
   "name": "krypton",
   "version": "4.0.0",
   "description": "Krypton - Bulma + Alpine JS ICO/Crypto Starter",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "@ryangjchandler/spruce": "^2.4.0",
-    "alpinejs": "^2.8.0",
-    "aos": "^3.0.0-beta.6",
-    "bulma": "^0.9.1",
-    "codemirror": "^5.58.3",
-    "feather-icons": "^4.24.0",
-    "ionicons": "^5.2.3",
-    "js-datepicker": "^5.16.0",
-    "notyf": "^3.9.0",
-    "plyr": "^3.5.6",
-    "postcss": "^8.1.6",
-    "simplebar": "^5.2.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/register": "^7.12.1",
-    "autoprefixer": "^10.0.1",
-    "babelify": "^10.0.0",
-    "browser-sync": "^2.26.13",
-    "browserify": "^17.0.0",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-postcss": "^9.0.0",
-    "gulp-purgecss": "^3.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-webp": "^4.0.1",
-    "ini": "1.3.6",
-    "log-symbols": "^4.0.0",
-    "node-bourbon": "^4.2.8",
-    "npm-force-resolutions": "0.0.3",
-    "panini": "^1.7.1",
-    "sass": "^1.30.0",
-    "vinyl-source-stream": "^2.0.0"
-  },
-  "resolutions": {
-    "ini": "1.3.6"
-  },
-  "scripts": {
-    "dev": "gulp",
-    "build": "gulp prod",
-    "prod": "gulp prod",
-    "preinstall": "npx npm-force-resolutions"
+  "author": "cssninjaStudio",
+  "license": "MIT",
+  "homepage": "https://cssninjastudio.github.io/krypton",
+  "bugs": {
+    "url": "https://github.com/cssninjaStudio/krypton/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/"
+    "url": "git@github.com:cssninjaStudio/krypton.git"
   },
   "keywords": [
     "gulp",
@@ -68,10 +19,49 @@
     "bulmacss",
     "sass"
   ],
-  "author": "Css Ninja",
-  "license": "Commercial",
-  "bugs": {
-    "url": "https://github.com/"
+  "type": "module",
+  "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+  "scripts": {
+    "dev": "gulp",
+    "build": "gulp build"
   },
-  "homepage": "https://github.com/"
+  "dependencies": {
+    "@ryangjchandler/spruce": "2.7.1",
+    "alpinejs": "3.5.2",
+    "aos": "3.0.0-beta.6",
+    "codemirror": "5.64.0",
+    "feather-icons": "4.28.0",
+    "ionicons": "6.0.0",
+    "js-datepicker": "5.18.0",
+    "notyf": "3.10.0",
+    "plyr": "3.6.9",
+    "postcss": "8.3.11",
+    "simplebar": "5.3.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.16.4",
+    "@babel/register": "7.16.0",
+    "autoprefixer": "10.4.0",
+    "babelify": "10.0.0",
+    "browser-sync": "2.27.7",
+    "browserify": "17.0.0",
+    "del": "6.0.0",
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "8.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-imagemin": "8.0.0",
+    "gulp-purgecss": "4.0.3",
+    "gulp-replace": "1.1.3",
+    "gulp-sass": "5.0.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-uglify": "3.0.2",
+    "gulp-webp": "4.0.1",
+    "ini": "2.0.0",
+    "log-symbols": "5.0.0",
+    "panini": "1.7.2",
+    "sass": "1.43.4",
+    "vinyl-source-stream": "2.0.0"
+  }
 }
