--- a/package.json
+++ b/package.json
@@ -27,15 +27,14 @@
     "setup": "gulp setup"
   },
   "dependencies": {
-    "@alpinejs/intersect": "^3.9.0",
-    "@alpinejs/persist": "^3.7.1",
+    "@alpinejs/intersect": "^3.10.2",
+    "@alpinejs/persist": "^3.10.2",
+    "@alpinejs/collapse": "^3.10.2",
     "@ryangjchandler/fern": "^0.1.0",
-    "alpinejs": "^3.9.0",
-    "bulma": "^0.9.3",
+    "alpinejs": "^3.10.2",
+    "bulma": "^0.9.4",
     "aos": "3.0.0-beta.6",
-    "codemirror": "5.64.0",
     "feather-icons": "4.28.0",
-    "ionicons": "6.0.0",
     "js-datepicker": "5.18.0",
     "notyf": "3.10.0",
     "plyr": "3.6.9",
