--- a/package.json
+++ b/package.json
@@ -17,26 +17,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@alpinejs/collapse": "3.11.1",
-    "@alpinejs/intersect": "3.11.1",
-    "@alpinejs/persist": "3.11.1",
+    "@alpinejs/collapse": "3.12.0",
+    "@alpinejs/intersect": "3.12.0",
+    "@alpinejs/persist": "3.12.0",
     "@iconify/iconify": "3.1.0",
-    "alpinejs": "3.11.1",
-    "astro": "2.0.10",
+    "alpinejs": "3.12.0",
+    "astro": "2.1.3",
     "bulma": "0.9.4",
     "bulma-css-vars": "0.8.0",
-    "fuse.js": "6.5.3",
+    "fuse.js": "6.6.2",
     "js-datepicker": "5.18.2",
     "lozad": "1.16.0",
-    "moment": "2.29.1",
+    "moment": "2.29.4",
     "notyf": "3.10.0",
     "particles.js": "2.0.0",
-    "plyr": "3.7.3",
-    "sass": "1.57.0",
-    "simplebar": "6.2.0"
+    "plyr": "3.7.7",
+    "sass": "1.59.3",
+    "simplebar": "6.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.13",
-    "npm-run-all": "4.1.5"
+    "autoprefixer": "10.4.14",
+    "npm-run-all": "4.1.5",
+    "unplugin-fonts": "^1.0.0"
   }
 }
