feat: use variable fonts from fontsources

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "simplebar": "6.2.5"
   },
   "devDependencies": {
+    "@fontsource-variable/cabin": "^5.0.9",
+    "@fontsource-variable/open-sans": "^5.0.13",
     "autoprefixer": "10.4.15",
     "npm-run-all": "4.1.5",
     "unplugin-fonts": "^1.0.3"
