--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": {
     "name": "cssninjaStudio <hello@cssninja.io> (https://cssninja.io)"
   },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
@@ -39,7 +43,6 @@
     "@fontsource-variable/cabin": "^5.0.9",
     "@fontsource-variable/open-sans": "^5.0.13",
     "autoprefixer": "10.4.15",
-    "npm-run-all": "4.1.5",
-    "unplugin-fonts": "^1.0.3"
+    "npm-run-all": "4.1.5"
   }
 }
